<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">OrçamentoFree</string>
    <string name="action_settings">Settings</string>

    <!-- MAIN -->
    <string name="btn_orcamento_add">Novo Orçamento</string>
    <string name="menu_add_orcamento">Novo Orçamento</string>
    <string name="menu_sair_orcamento">Sair</string>

    <!-- ORCAMENTO -->
    <string name="btn_orcamento_save">Salvar</string>
    <string name="btn_orcamento_delete">Excluir</string>
    <string name="btn_orcamento_cancel">Voltar</string>
    <string name="txt_orcamento_descricao">Descrição</string>
    <string name="txt_orcamento_endereco">Endereço</string>
    <string name="txt_orcamento_loja">Loja</string>
    <string name="btn_produto_add">+ Produto</string>
    <string name="btn_orcamento_export">Exportar Orçamentos</string>
    <string name="menu_save_orcamento">Salvar</string>
    <string name="menu_cancel_orcamento">Voltar</string>
    <string name="menu_delete_orcamento">Excluir</string>
    <string name="msg_valid_message">Campos obrigatórios NÂO preenchidos</string>
    <string name="msg_orcamento_save">Orçamento salvo !</string>
    <string name="msg_orcamento_delete">Orcamento deletado !</string>
    <string name="msg_orcamento_not_selected">Selecione um orcamento !</string>
    <string name="msg_orcamento_cancel_operation">Ops..! Preencha os campos.</string>
    <string name="msg_orcamento_export">   Lista Exportada! A lista de orçamentos foi salva no seu cartão de memória na pasta - LISTA DE ORÇAMENTOS</string>
    <string name="msg_orcamento_export_error">Ops... Ocorreu um erro!</string>
    <string name="msg_orcamento_export_sdcard_fail">Cartão de Memória não encontrado</string>

    
    
    <!-- PRODUTO -->
    <string name="txt_produto_descricao">Descrição</string>
    <string name="txt_produto_codigo">Código</string>
    <string name="txt_produto_preco">Preço</string>
    <string name="txt_produto_qtd">Qtde</string>
    <string name="txt_produto_um">Unidade de Medida</string>
    <string name="txt_produto_total">Total R$</string>
    <string name="btn_produto_foto">+ Foto</string>
    <string name="btn_produto_save">Salvar</string>
    <string name="btn_produto_delete">Excluir</string>
    <string name="btn_produto_cancel">Voltar</string>
    <string name="menu_save_produto">Salvar</string>
    <string name="menu_cancel_produto">Voltar</string>
    <string name="menu_delete_produto">Excluir</string>
    <string name="msg_produto_save">Produto salvo !</string>
    <string name="msg_produto_delete">Produto deletado !</string>
    <string name="msg_produto_not_selected">Selecione um produto !</string>
    <string name="msg_produto_foto_not_selected">Ops...Foto não encontrada !</string>
    <string name="msg_produto_cancel_operation">Ops..! Preencha os campos.</string>

    <!-- TITULOS -->
    <string name="title_activity_intro">OrçamentoFree</string>
    <string name="title_activity_main">OrçamentoFree - Orçamentos</string>
    <string name="title_activity_orcamento_help">OrçamentoFree - Help</string>
    <string name="title_activity_orcamento">OrçamentoFree - Orçamento</string>
    <string name="title_activity_produto">OrçamentoFree - Produto</string>
    <string name="title_activity_produto_foto">OrçamentoFree - Produto - Foto</string>

    <!-- Help -->
    <string name="msg_help_app_name">OrçamentoFree vem para ajudar quem faz pesquisa de preços e tem a necessidade de comparar  \nPREÇO X  QUALIDADE do produto pesquisado, pois tem a funcionalidade de vincular foto ao produto pesquisado.</string>
    <string name="msg_help_btn_export_orcamento">Botão com a função de exportar todos os ORÇAMENTOS e seus PRODUTOS para arquivo PDF, \nficando salvo no cartão de memória na pasta LISTA DE ORÇAMENTOS</string>
    <string name="msg_help_btn_add_orcamento">Botão com a função de CRIAR um novo orçamento.</string>
    <string name="msg_help_btn_save">Botão com a função de SALVAR Orcamento ou Produto, conforme tela o usuario esteja utilizando.</string>
    <string name="msg_help_btn_delete">Botão com a função de DELETAR Orcamento ou Produto, conforme tela o usuario esteja utilizando.</string>
    <string name="msg_help_btn_back">Botão com a função de VOLTAR a tela anterior, qualquer modificação realizada não será salva.</string>
    <string name="msg_help_btn_add_produto">Botão com a função de CRIAR  e vincular novo PRODUTO ao orcamento que esta sendo editado.</string>
    <string name="msg_help_btn_add_foto">Botão com a função de ADICIONAR foto ao produto que esta sendo editado.</string>

</resources>