<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical" >

    <EditText
        android:id="@+id/txt_orcamento_descricao"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:hint="@string/txt_orcamento_descricao"
        android:inputType="text"
        android:maxLength="25" >
    </EditText>

    <EditText
        android:id="@+id/txt_orcamento_loja"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:hint="@string/txt_orcamento_loja"
        android:inputType="text"
        android:maxLength="25" />

    <EditText        
        android:id="@+id/txt_orcamento_endereco"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:hint="@string/txt_orcamento_endereco"
        android:inputType="text"
        android:maxLength="25" />

    <Button
        android:id="@+id/btn_produto_add"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/btn_produto_add" />

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal" >

        <Button
            android:id="@+id/btn_orcamento_save"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/btn_orcamento_save" />

        <Button
            android:id="@+id/btn_orcamento_cancel"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/btn_orcamento_cancel" />

        <Button
            android:id="@+id/btn_orcamento_delete"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/btn_orcamento_delete" />
    </LinearLayout>

    <View
        android:layout_width="fill_parent"
        android:layout_height="2dp"
        android:background="#FF909090" />

    <ListView
        android:id="@+id/produtoList"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content">
    </ListView>

</LinearLayout>