<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent" >

    <TableLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content" >

        <TableRow>

            <EditText
                android:id="@+id/txt_produto_descricao"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:hint="@string/txt_produto_descricao"
                android:inputType="text"
                android:maxLength="25" >
            </EditText>
        </TableRow>
        
          <TableRow>

            <EditText
                android:id="@+id/txt_produto_qtd"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:hint="@string/txt_produto_qtd"
                android:inputType="numberDecimal"
                android:maxLength="6" />

            <EditText
                android:id="@+id/txt_produto_preco"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:hint="@string/txt_produto_preco"
                android:inputType="numberDecimal"
                android:maxLength="10" />

            <EditText
                android:id="@+id/txt_produto_total"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:hint="@string/txt_produto_total"
                android:textSize="16sp"
                android:textColor="@color/white"
                android:layout_marginLeft="5dp"
                android:enabled="false"
                android:textStyle="bold" />
        </TableRow>
        

        <TableRow>

            <EditText
                android:id="@+id/txt_produto_codigo"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="2"
                android:ems="10"
                android:hint="@string/txt_produto_codigo"
                android:inputType="text"
                android:maxLength="25" >
            </EditText>

            <Spinner
                android:id="@+id/spn_um_produto"
                android:layout_width="0dp"
                android:layout_height="49dp"
                android:layout_weight="1"
                android:prompt="@string/txt_produto_um" />
        </TableRow>

        <TableRow>

            <Button
                android:id="@+id/btn_produto_foto"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="@color/black"
                android:drawableTop="@drawable/ic_action_camera"
                android:text="@string/btn_produto_foto"
                android:textColor="@color/white" />

            <Button
                android:id="@+id/btn_produto_save"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="@color/black"
                android:drawableTop="@drawable/ic_action_save"
                android:text="@string/btn_produto_save"
                android:textColor="@color/white" />

            <Button
                android:id="@+id/btn_produto_cancel"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="@color/black"
                android:drawableTop="@drawable/ic_action_undo"
                android:text="@string/btn_produto_cancel"
                android:textColor="@color/white" />

            <Button
                android:id="@+id/btn_produto_delete"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="@color/black"
                android:drawableTop="@drawable/ic_action_discard"
                android:text="@string/btn_produto_delete"
                android:textColor="@color/white" />
        </TableRow>

        <TableRow>

            <View
                android:layout_width="0dp"
                android:layout_height="1dp"
                android:layout_weight="1"
                android:background="#FF909090" />
        </TableRow>

        <TableRow>

            <ImageView
                android:id="@+id/img_produto"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginBottom="10dp"
                android:layout_marginTop="10dp"
                android:layout_weight="1"
                android:contentDescription="@string/app_name" />
        </TableRow>
    </TableLayout>

</ScrollView>